tests/machine/x/st/map_in_operator.st
| m |
m := Dictionary newFrom:{1->'a'. 2->'b'}.
Transcript show: ((1 in m)) printString; cr.
Transcript show: ((3 in m)) printString; cr.
